--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+*{
+  box-sizing: border-box;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul,li,a,p,h1,h2,h3{
+  padding: 0;
+  margin: 0;
+  color: inherit;
+  list-style: none;
+  text-decoration: none;
 }
